--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Associates Degree, Business Management
-  uni: Springfield College
+- degree: Highschool Diplomia
+  uni: Martin Luther King Highschool
   year: 1984 &mdash; 1986
-  awards: Quickest to fall asleep
-  summary: If you had any meaningful roles at college, feel free to write about them here
+  awards: Communicator, Chours Leader
+  summary: I was in high achievers classes, I was accpeted in IB Learner courses for highschool, I was in chours, French class, and I was a robotics leader.
