--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ resume_title:                   "Github Scholar"
 resume_contact_email:
   "rheldarhoo@gmail.com"
 resume_header_contact_info: "123 Clovers Field Ln | {770}-374-2808 | rheldarhoo@gmail.com"
-resume_header_intro: "<p>"
+resume_header_intro: "<p>I want to be a registered nurse beacuse I like to help others and I want to save people's lives. Another choice I have in mind is a school teacher because I love working with children and I want to prepare them for life."
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
