--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,19 @@
 # Jobs
-# Springfield Nuclear Power Plant
-- company: Springfield Nuclear Power Plant
-  position: Safety Inspector
-  duration: Nov, 1980 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Ate lots of donuts</li><li>Fell asleep rarely</li><li>Left promptly at end of day (sometimes earlier)</li></ul>
+# Baby Rhoos
+- company: Baby Rhoos Babysitting
+  position: Owner
+  duration: July 17 &mdash; Present
+  summary: I own a babysitting business that I stated about two years ago. I am certified in babysitting, with RedCross, CPR and AED, and SafeSitters.<ul class="resume-item-list"><li>Ate lots of donuts</li><li>Fell asleep rarely</li><li>Left promptly at end of day (sometimes earlier)</li></ul>
 
-# Windmill Crank Operator
-- company: Sir Putt-A-Lot's Merrie Olde Fun Centre
-  position: Safety Inspector
+# Extra Activities and Voulnteering Jobs
+- company: Volunteer Time and Extra Curriculars
+  position: Voulnteering and After-School
   duration:  Jun, 1978 &mdash; Sept, 1979
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+  summary: I was in chours, robotics, I volunteered at a daycare, and I did a can-food drive. 
 
 
-# Front Desk Attendant
-- company: Simpson Lazer Tag
-  position: Front Desk Attendant
-  duration:   Jun, 1975  &mdash; May, 1978
-  summary: Boy, when Marge first told me she was going to the Police Academy, I thought it would be fun and exciting, you know, like the movie... Spaceballs. But instead, it's been painful and disturbing, like the movie Police Academy.
+# Camps
+- company: BlackCollege Bound, GitHub, GitHub Flow, Blacktop Circus, and French Camp
+  position: Camper
+  duration:   2015  &mdash; Present
+  summary: Black and College Bound, GitHub, GitHub Flow, taught me how to code, program, network, team-build; french camp taught me beginners french; and Blacktop circus helped me with my acting career.
