--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,9 +1,8 @@
 # Skills
-# Donut design
-- skill: Donut design
-  description: Sprinkle art, icing design, eclair management, taste testing, donut/coffee pairing research
-
-# Craft beer brewing
+# Leadership
+- skill: Being a Leader
+  description: 
+# Singing
 - skill: Craft beer brewing
   description: Hops inspection, brew testing, distribution management, bottle label design, festival and event management
 
